fixed double scroll

--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -7,7 +7,6 @@
 .agenda-app {
     display: grid;
     grid-template-columns: var(--board-grid-column) 1fr;
-    overflow-x: hidden;
 }
 
 .add-board-modal-open {
