--- a/src/styles/cmps/_board-header.scss
+++ b/src/styles/cmps/_board-header.scss
@@ -4,6 +4,8 @@
   padding: 20px 10px 10px 20px;
   position: fixed;
   width: calc(100vw - var(--board-grid-column) - 40px);
+  background-color: var(--clr-item-bg);
+  z-index: 5;
 
   .board-info {
     justify-content: space-between;
